fixing layout issues with css and amended html

--- a/categories/static/categories/css/categories.css
+++ b/categories/static/categories/css/categories.css
@@ -42,7 +42,7 @@ header .navbar-nav .nav-link {
     }
 
     #breadcrumb-main {
-        padding-top: 35px;
+        padding-top: 5px;
     }
 
     #bottom-img {
